--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "postBuild": "npm run deploy",
     "predeploy": "rimraf ../resources/static/ && mkdirp ../resources/static",
-    "deploy": "copyfiles -e **/*.png -f dist/frontend/** ../resources/static && copyfiles -f dist/frontend/assets/** ../resources/static/assets/img",
+    "deploy": "copyfiles -e '**/*.png' -e '**/*.jpg' -f 'dist/frontend/**' ../resources/static && copyfiles -e '**/*.md' -e '**/*.json' -e '**/*.txt' -e '**/*.woff2' -e '**/*.woff' -e '**/*.ttf' -e '**/*.svg' -e '**/*.eot' -e '**/*.otf' -e '**/*.map' -e '**/*.css' -e '**/*.scss' -e '**/*.less' -f 'dist/frontend/assets/**' ../resources/static/assets/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -49,7 +49,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "mkdirp": "^0.5.1",
     "protractor": "~5.4.0",
-    "rimraf": "^2.6.2",
+    "rimraf": "^2.6.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
