Testing on production

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,18 @@
+# Enabling H2 Console
+spring.h2.console.enabled=true
+
 spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Https config for local machine
+server.port=8443
+security.require-ssl=true
+server.ssl.key-store=/etc/letsencrypt/live/codeonblue.com.br/keystore.p12
+server.ssl.key-store-password=codeonblue
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=codeonblue
+
